# ChangeLog for gentoo-src/stager
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.15 2003/10/10 01:33:52 zhen Exp $

  09 Oct 2003; <zhen@gentoo.org> catalyst, bin/build.sh, bin/stage1,
  files/catalyst.conf, include/build_functions.sh, include/functions.sh:
  the changes that I made to the above files should make catalyst completely
  transparent to no matter what profile we are using. check files/catalyst.conf
  for the list of BUILDTYPEs that we support.

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  changed how cmd line arguments are handled

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  I changed the is_special handling so that it is cleaner and faster

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/functions.sh,
  livecd/foundations/x86-basic/base.pkg,
  livecd/foundations/x86-basic/kern.pkg,
  livecd/foundations/x86-basic/post-clean.sh,
  livecd/foundations/x86-basic/pre-clean.sh,
  livecd/foundations/x86-basic/settings:
  I outsourced more functions to include/functions.sh. I made it a seperate file
  from build_fucntions.sh so that we can keep our build and other functions
  apart. I also added in the livecd stuffs from the stager side of things.

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/build_functions.sh:
  I outsourced all of the build functions to include/build_functions.sh. In the
  future, this will happen more - the code needs cleaned up.

  07 Oct 2003; zhen <zhen@gentoo.org> catalyst, bin/bootstrap.sh, bin/stage1:
  I mucked with stage1 and bootstrap.sh to add support for ${BUILDTYPE} (profile
  transparency). Also, I removed gettext from bootstrap, since mainline gentoo
  does not use that anymore.

  05 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  since we now have a default profile in portage, i massaged some errors
  messages to reflect that.
