@@ -1,9 +1,9 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.28 2003/10/11 19:28:46 drobbins Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.29 2003/10/11 22:34:55 zhen Exp $
 
-VERSION="2.1"
+VERSION="2.2"
 
 source /sbin/functions.sh
 source include/functions.sh
@@ -28,22 +28,6 @@ install -d $MY_DIST_LOCALS
 [ "$TMPDIR" = "" ] && CHROOTDIR="/var/tmp/catalyst/build/stage-${2}-${4}" || CHROOTDIR="$TMPDIR/stage-${2}-${4}"
 
 MYPROFILEDIR="/usr/portage/profiles/${BUILDTYPE}-${MAINARCH}-${MAINVERSION}"
-
-snap() {
-	[ "$TMPDIR" = "" ] && CHROOTDIR="/var/tmp/catalyst/build/snap-${1}" || CHROOTDIR="$TMPDIR/snap-${1}"
-	SNAPBALL=${SNAPDIR}/portage-${1}.tar.bz2
-
-	install -d ${SNAPDIR}
-	einfo "Cleaning up build directory..."
-	rm -rf ${CHROOTDIR}
-	install -d ${CHROOTDIR}
-	einfo "Creating Portage tree snapshot..."	
-	rsync -a --exclude /packages/ --exclude /distfiles/ --exclude CVS/ ${MY_PORTDIR}/ ${CHROOTDIR}/portage/ || die
-	einfo "Creating Portage tree tarball..."
-	( cd $CHROOTDIR; tar cjf ${SNAPBALL} portage ) || die
-	einfo "done!"
-
-} #end snap
 
 #umount() {
 #	einfo "Unmounting..."
@@ -97,6 +81,7 @@ case "$1" in
 
 	*)
 		usage
+		exit 1
 	;;
 esac
 
@@ -107,11 +92,15 @@ SUBARCH=$1
 DESTSTAGE="${2}"
 DESTVER="${3}"
 SRCFORTAR=${CHROOTDIR}
+
 rm -f /tmp/catalyst.settings
+
 include/catalyst-settings $SUBARCH > /tmp/catalyst.settings
 source /tmp/catalyst.settings
+
 CFLAGS="${CFLAGS} -pipe"
 echo $CFLAGS
+
 pre_build $2 $3 $4
 build $2
 post_build $2
